--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -8408,5 +8408,14 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>Screaming Alarm Clock</target>
       </segment>
     </unit>
+    <unit id="9ZHsnl1" name="Das brauchst du gerade nicht...">
+      <notes>
+        <note category="german">Das brauchst du gerade nicht...</note>
+      </notes>
+      <segment>
+        <source>Das brauchst du gerade nicht...</source>
+        <target>Das brauchst du gerade nicht...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
