--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -8423,5 +8423,14 @@
         <target>Despertador chillón</target>
       </segment>
     </unit>
+    <unit id="9ZHsnl1" name="Das brauchst du gerade nicht...">
+      <notes>
+        <note category="german">Das brauchst du gerade nicht...</note>
+      </notes>
+      <segment>
+        <source>Das brauchst du gerade nicht...</source>
+        <target>Das brauchst du gerade nicht...</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
