--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -8429,7 +8429,7 @@
       </notes>
       <segment>
         <source>Das brauchst du gerade nicht...</source>
-        <target>Das brauchst du gerade nicht...</target>
+        <target>No necesitas eso ahora mismo...</target>
       </segment>
     </unit>
   </file>
