--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -2771,5 +2771,14 @@
         <target>Personal message</target>
       </segment>
     </unit>
+    <unit id="sqGIX9S" name="Zum Wechsein der Seite hier klicken">
+      <notes>
+        <note category="german">Zum Wechsein der Seite hier klicken</note>
+      </notes>
+      <segment>
+        <source>Zum Wechsein der Seite hier klicken</source>
+        <target>Click to change page</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
