--- a/translations/global.fr.xlf
+++ b/translations/global.fr.xlf
@@ -2778,5 +2778,14 @@
         <target>Commentaire personnel</target>
       </segment>
     </unit>
+    <unit id="sqGIX9S" name="Zum Wechsein der Seite hier klicken">
+      <notes>
+        <note category="german">Zum Wechsein der Seite hier klicken</note>
+      </notes>
+      <segment>
+        <source>Zum Wechsein der Seite hier klicken</source>
+        <target>Cliquez pour changer de page</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
