--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19811,7 +19811,7 @@
       </notes>
       <segment>
         <source>Jeder Bürger, der herkommt, um den Horizont abzusuchen, kann die Qualität der Abschätzung verbessern.</source>
-        <target>Jeder Bürger, der herkommt, um den Horizont abzusuchen, kann die Qualität der Abschätzung verbessern.</target>
+        <target>Chaque citoyen qui viendra scruter l'horizon ici pourra améliorer la qualité de l'estimation.</target>
       </segment>
     </unit>
   </file>
