--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -8557,7 +8557,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Bleib mal ganz geschmeidig! In dieser Stadt gibt es keine Ghule, also solltest du auch nicht herumlaufen und grundlos Leute verprügeln. M'Kay?</source>
-        <target>Steady on there, by all accounts there are no ghouls in town, so there's no need to go smacking people. Mmkay pumpkin?</target>
+        <target><![CDATA[Steady on there, by all accounts there are <strong>no ghouls in town</strong>, so there's no need to go smacking people. Mmkay pumpkin?]]></target>
       </segment>
     </unit>
     <unit id="i2Ptm8n" name="%citizen% ist bereits verletzt; ihn erneut anzugreifen wird dir nichts bringen.">
