--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2755,7 +2755,7 @@
     </unit>
     <unit id="sqGIX9S" name="Zum Wechsein der Seite hier klicken">
       <notes>
-        <note category="german">Click to change page</note>
+        <note category="german">Zum Wechsein der Seite hier klicken</note>
       </notes>
       <segment>
         <source>Zum Wechsein der Seite hier klicken</source>
