--- a/translations/login.fr.xlf
+++ b/translations/login.fr.xlf
@@ -673,5 +673,26 @@
         <target>Votre fournisseur de messagerie ne délivre pas de manière fiable les e-mails de MyHordes. Nous vous recommandons fortement d’utiliser une autre adresse e-mail pour vous inscrire à MyHordes. Désolé pour le dérangement !</target>
       </segment>
     </unit>
+    <unit id="uQUHCC6">
+      <notes>
+        <note category="german">Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.</note>
+      </notes>
+      <segment>
+        <source>Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.</source>
+        <target>Bevor du mit deinem EternalTwin-Account spielen kannst, brauchen wir noch ein paar zusätzliche Informationen von dir.</target>
+      </segment>
+    </unit>
+    <unit id="wmjJuDK">
+      <notes>
+        <note category="german">Um die Registrierung abzuschließen und deinen Account zu aktivieren, musst du auf einen
+                                            Aktivierungslink klicken, der dir an die angegebene E-Mail Adresse geschickt wird.</note>
+      </notes>
+      <segment>
+        <source>Um die Registrierung abzuschließen und deinen Account zu aktivieren, musst du auf einen
+                                            Aktivierungslink klicken, der dir an die angegebene E-Mail Adresse geschickt wird.</source>
+        <target>Um die Registrierung abzuschließen und deinen Account zu aktivieren, musst du auf einen
+                                            Aktivierungslink klicken, der dir an die angegebene E-Mail Adresse geschickt wird.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
