--- a/translations/security.es.xlf
+++ b/translations/security.es.xlf
@@ -154,5 +154,23 @@
         <target>Enlace de inicio de sesión inválido o expirado.</target>
       </segment>
     </unit>
+    <unit id="9qGC3hG" name="Too many failed login attempts, please try again in %minutes% minute.">
+      <notes>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in einer Minute noch einmal.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minute.</source>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en %minutes% minuto.</target>
+      </segment>
+    </unit>
+    <unit id="AJR3lMs" name="Too many failed login attempts, please try again in %minutes% minutes.">
+      <notes>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in %minutes% Minuten noch einmal.</note>
+      </notes>
+      <segment>
+        <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
+        <target>Demasiados intentos fallidos de inicio de sesión, inténtelo de nuevo en %minutes% minutos.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
