--- a/translations/security.fr.xlf
+++ b/translations/security.fr.xlf
@@ -156,7 +156,7 @@
     </unit>
     <unit id="9qGC3hG" name="Too many failed login attempts, please try again in %minutes% minute.">
       <notes>
-        <note category="german">Too many failed login attempts, please try again in %minutes% minute.</note>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in einer Minute noch einmal.</note>
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again in %minutes% minute.</source>
@@ -165,7 +165,7 @@
     </unit>
     <unit id="AJR3lMs" name="Too many failed login attempts, please try again in %minutes% minutes.">
       <notes>
-        <note category="german">Too many failed login attempts, please try again in %minutes% minutes.</note>
+        <note category="german">Zu viele fehlgeschlagene Anmeldeversuche, bitte versuchen Sie es in %minutes% Minuten noch einmal.</note>
       </notes>
       <segment>
         <source>Too many failed login attempts, please try again in %minutes% minutes.</source>
